<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".CategoriaComidasActivity">

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_elija_una_categoria"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <RadioGroup
        android:id="@+id/rgCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" >

        <RadioButton
            android:id="@+id/rbCarnes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_Carnes"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="190dp" />

        <RadioButton
            android:id="@+id/rbEnsaladas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_Ensaladas" />

        <RadioButton
            android:id="@+id/rbFrutas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_Frutas" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSiguiente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />
</androidx.constraintlayout.widget.ConstraintLayout>